// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar with AvatarBadge renders correctly 1`] = `
<DocumentFragment>
  <div
    class="css-1sovlky"
    data-chakra-component="CAvatar"
  >
    <img
      alt="Mesut Koca"
      class="css-6qjm3j"
      data-chakra-component="CBox"
      src="LOAD_SUCCESS_SRC"
    />
    <div
      class="css-bruuz9"
      data-chakra-component="CAvatarBadge"
    />
  </div>
</DocumentFragment>
`;

exports[`renders a name avatar if no src 1`] = `<DocumentFragment />`;

exports[`renders an image 1`] = `<DocumentFragment />`;

exports[`should render correctly 1`] = `
<DocumentFragment>
  <div
    class="css-1sovlky"
    data-chakra-component="CAvatar"
    data-testid="avatar"
  >
    <img
      alt="Mesut Koca"
      class="css-6qjm3j"
      data-chakra-component="CBox"
      src="LOAD_SUCCESS_SRC"
    />
  </div>
</DocumentFragment>
`;
